<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeagueChat</string>
    <string name="LoginTitle">LEAGUE CHAT</string>
    <string name="acc_info">Account Information</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="ellipses">...</string>
    <string name="login_subreddit">/r/LeagueOfLegends</string>
    <string name="login_button_text">Log In</string>
    <string name="title_activity_act_login_transition">s</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">LeagueChat</string>
    <string name="title_activity_chat">Chat</string>
    <string name="enterMessageText">Enter a Message...</string>
    <string name="title_activity_act_prof_settings">Settings</string>

</resources>
