<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:text="@string/LoginTitle"
        android:textSize="42sp"
        android:textColor="#FF9F00"
        android:gravity="center"
        android:id="@+id/txtLoginTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acc_info"
        android:text="@string/acc_info"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-15dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:textScaleX="1.11">
    </TextView>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/border_no_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="5dp"
            android:background="@drawable/border_only_bot"/>
        <EditText
            android:id="@+id/et_enter_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ellipses"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:paddingBottom="6.25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_only_bot"
            android:inputType="textVisiblePassword"
            android:selectAllOnFocus="true"
            android:maxLength="24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginLeft="-260dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="60dp"/>

        <EditText
            android:id="@+id/et_enter_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ellipses"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:inputType="textVisiblePassword"
            android:selectAllOnFocus="true"
            android:background="@null"
            android:maxLength="16"/>


    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/login_button_text"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-15dp"
        android:onClick="beginLogin"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:text="@string/login_subreddit"
        android:textSize="28sp"
        android:textColor="#FF9F00"
        android:gravity="center"
        android:id="@+id/txtPostsTitle"/>
    <ListView
        android:id="@+id/txtStories"
        android:layout_width="270dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:descendantFocusability="afterDescendants"/>
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</LinearLayout>

